--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -1,13 +1,15 @@
-<mat-form-field class="example-form-field">
-  <mat-label>Game Number</mat-label>
-  <input
-    matInput
-    type="number"
-    [ngModel]="gameNumber"
-    (ngModelChange)="updateGameNumber($event)"
-    min="1"
-  />
-</mat-form-field>
+<div class="centered">
+  <mat-form-field class="game-number">
+    <mat-label>Game #</mat-label>
+    <input
+      matInput
+      type="number"
+      [ngModel]="gameNumber"
+      (ngModelChange)="updateGameNumber($event)"
+      min="1"
+    />
+  </mat-form-field>
+</div>
 
 <div class="container">
   <div class="grid" [style.--columnCount]="grid.length + 0">
