--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -83,7 +83,8 @@
   top: 0.2cqmin;
   left: 0.5cqmin;
   font-size: calc(6cqmin / var(--columnCount) * 3);
-  min-width: calc(7cqmin / var(--columnCount) * 3);
+  padding-left: calc(1.3cqmin / var(--columnCount) * 3);
+  padding-right: calc(1.3cqmin / var(--columnCount) * 3);
   border-radius: calc(2cqmin / var(--columnCount) * 3);
   text-align: center;
 }
