attempting to calculate if a game is solvable

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -10,7 +10,7 @@
     />
   </mat-form-field>
 
-  Fails: {{ fails }}
+  Fails: {{ fails }} &nbsp; Solvable: {{ solvable }}
 </div>
 
 <div class="container">
