margin on stats

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -28,7 +28,7 @@
     </button>
   </mat-form-field>
 
-  Fails: {{ fails }} &nbsp; Solvable: {{ solvable }}
+  <div class="stats">Fails: {{ fails }} &nbsp; Solvable: {{ solvable }}</div>
 </div>
 
 <div class="container">
