--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,7 @@
+<app-celebration></app-celebration>
+
 <div class="page">
   <router-outlet></router-outlet>
 </div>
 
-
-<div class="version">
-  v. {{AppVersion.VERSION}}
-</div>
+<div class="version">v. {{ AppVersion.VERSION }}</div>
