--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -3,7 +3,12 @@
 }
 
 .game-number {
-  max-width: 150px;
+  max-width: 91px;
+}
+
+.game-button {
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .stats {
