--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -27,7 +27,19 @@
     <mat-icon>add_circle</mat-icon>
   </button>
 
-  <div class="stats">Fails: {{ fails }} &nbsp; Solvable: {{ solvable }}</div>
+  <div class="stats">
+    <div style="display: inline-flex; align-items: center">
+      <span>Fails: {{ fails }}</span>
+
+      @if (!solvable) {
+        &nbsp;&nbsp;&nbsp;
+        <mat-icon style="color: light-dark(#ee0000, #ff3a3a)"
+          >report_problem</mat-icon
+        >
+        <span>Unsolvable puzzle</span>
+      }
+    </div>
+  </div>
 </div>
 
 <div class="container">
@@ -76,7 +88,7 @@
           class="no-select"
         >
           <div class="corner-number bg-muted">
-            {{ cell.colorGroupGoalDisplay }}
+            {{ cell.colorGroupGoalDisplayValue }}
           </div>
           <div
             class="content"
