changing failures to mistakes

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -30,7 +30,7 @@
 
     <div class="stats">
       <div style="display: inline-flex; align-items: center">
-        <span>Fails: {{ fails }}</span>
+        <span>Mistakes: {{ mistakes }}</span>
 
         @if (!solvable) {
           &nbsp;&nbsp;&nbsp;
