--- a/src/app/documentation/documentation.html
+++ b/src/app/documentation/documentation.html
@@ -11,7 +11,7 @@
   </p>
   <p>
     It’s where <strong>logic shakes hands with arithmetic</strong>. The board
-    starts jam-packed with digits, but only some of them <s>some up</s> 
+    starts jam-packed with digits, but only some of them <s>some up</s>
     sum up and belong in the final answer. Your job?
     <strong>Sniff out the keepers, whack the impostors</strong>, and prove you
     can handle <em>some serious numbers</em>.
@@ -60,7 +60,7 @@
     <li>
       <strong>Built-in feedback:</strong> If you try to keep a number that
       doesn’t belong or remove a number that is required, your device will
-      <em>vibrate</em> and the <strong>fail counter</strong> will increase.
+      <em>vibrate</em> and the <strong>Mistakes</strong> counter will increase.
     </li>
   </ol>
 
