centralizing no select and covering more bases as safari was being strange

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container no-select">
   <div class="grid" [style.--columnCount]="grid.length + 0">
     <div class="cell">
       <!-- blank first cell -->
