--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,3 +63,13 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.no-select {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  cursor: default;
+  -webkit-touch-callout: none;
+  /* Disable callout on iOS */
+}
