--- a/src/app/documentation/documentation.html
+++ b/src/app/documentation/documentation.html
@@ -59,8 +59,10 @@
     </li>
     <li>
       <strong>Built-in feedback:</strong> If you try to keep a number that
-      doesn’t belong or remove a number that is required, your device will
-      <em>vibrate</em> and the <strong>Mistakes</strong> counter will increase.
+      doesn’t belong or remove a number that is required, the cell will shake,
+      as if squirming under the pressure of being found out. The
+      <strong>Mistakes</strong> counter will also increase with each mistake
+      made.
     </li>
   </ol>
 
