--- a/src/app/component/celebration/celebration.scss
+++ b/src/app/component/celebration/celebration.scss
@@ -1,4 +1,3 @@
-
 .celebration-overlay {
   position: fixed;
   top: 0;
@@ -13,6 +12,7 @@
   z-index: 10000;
   overflow: hidden;
   line-height: normal;
+  opacity: 0.95;
 
   &.active {
     display: block;
@@ -28,7 +28,7 @@
   }
 
   to {
-    opacity: 1;
+    opacity: 0.95;
   }
 }
 
@@ -46,8 +46,7 @@
   font-size: clamp(2rem, 8vw, 6rem);
   font-weight: 900;
   margin-bottom: 20px;
-  text-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-  animation: titleBounce 1s ease-out;
+
   background: linear-gradient(45deg,
       light-dark(#e70000, #f95757),
       light-dark(#00ceff, #00ceff),
@@ -55,6 +54,8 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
 @keyframes titleBounce {
@@ -77,7 +78,7 @@
   font-size: clamp(1rem, 3vw, 2rem);
   margin-bottom: 30px;
   animation: subtitleSlideUp 1s ease-out 0.3s both;
-  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 @keyframes subtitleSlideUp {
