moving app version to doc page

--- a/src/app/documentation/documentation.html
+++ b/src/app/documentation/documentation.html
@@ -117,3 +117,5 @@
     and when rows, columns, and color groups all add up perfectly—you win. 🎉
   </p>
 </div>
+
+<div class="version">v. {{ AppVersion.VERSION }}</div>
