disabling select on entire game page as i think it was interfering with swipes and taps...
i think the board was redrawing after a tap, and sometimes the second tap would land on an undrawn board, which would then select text elsewhere int he documetn

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -1,4 +1,4 @@
-<div class="page-container">
+<div class="page-container no-select">
   <div class="top-section">
     <div class="centered">
       <div class="top-controls">
@@ -50,7 +50,7 @@
   </div>
 
   <div class="game-board-section">
-    <div class="container no-select">
+    <div class="container">
       <table class="game-table">
         @for (row of gameBoard.fullBoard; track $index; let rowIndex = $index) {
           <tr>
