--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
 }
 
 .top-section {
@@ -16,7 +15,6 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  overflow: hidden;
   min-height: 0;
   container-type: size;
   margin-top: 20px;
@@ -55,44 +53,48 @@
   justify-self: center;
 }
 
-.bg-muted {
+.bg-muted:not(.hidden) {
   background: var(--mat-sys-surface-variant);
   color: var(--mat-sys-on-surface-variant);
 }
 
-.color-1 {
+.cell.bg-muted.hidden {
+  box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--mat-sys-surface-variant);
+}
+
+.color-1:not(.hidden) {
   background-color: light-dark(#f15c5c, #50322d);
 }
 
-.color-2 {
+.color-2:not(.hidden) {
   background-color: light-dark(#f38347, #943501);
 }
 
-.color-3 {
+.color-3:not(.hidden) {
   background-color: light-dark(#f5e94e, #817d00);
 }
 
-.color-4 {
+.color-4:not(.hidden) {
   background-color: light-dark(#8ed091, #1b5e20);
 }
 
-.color-5 {
+.color-5:not(.hidden) {
   background-color: light-dark(#5e9799, #840046);
 }
 
-.color-6 {
+.color-6:not(.hidden) {
   background-color: light-dark(#66a7e8, #0062af);
 }
 
-.color-7 {
+.color-7:not(.hidden) {
   background-color: light-dark(#9192d7, #282a93);
 }
 
-.color-8 {
+.color-8:not(.hidden) {
   background-color: light-dark(#e8acff, #540dab);
 }
 
-.color-9 {
+.color-9:not(.hidden) {
   background-color: light-dark(#b57881, #9e0b91);
 }
 
@@ -101,7 +103,6 @@
   height: 100%;
   max-width: min(100%, 100cqh); // Square aspect ratio constraint
   max-height: min(100%, 100cqw);
-  overflow: auto;
   line-height: normal;
 }
 
@@ -150,6 +151,10 @@
   width: calc((100cqmin - var(--headerSpacing) - ((var(--columnCount) - 2) * var(--cellGap)))/ var(--columnCount));
 }
 
+.cell.hidden {
+  box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px #ff00007a;
+}
+
 .corner-number {
   position: absolute;
   top: 0cqmin;
@@ -159,6 +164,10 @@
   padding-right: calc(1.3cqmin / var(--columnCount) * 3);
   border-radius: calc(2cqmin / var(--columnCount) * 3);
   text-align: center;
+}
+
+.hidden .corner-number {
+  visibility: hidden;
 }
 
 .cell-number {
