--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -1,3 +1,18 @@
+:host {
+  --color-1: light-dark(#f15c5c, #50322d);
+  --color-2: light-dark(#f38347, #943501);
+  --color-3: light-dark(#f5e94e, #817d00);
+  --color-4: light-dark(#8ed091, #1b5e20);
+  --color-5: light-dark(#5e9799, #840046);
+  --color-6: light-dark(#66a7e8, #0062af);
+  --color-7: light-dark(#9192d7, #282a93);
+  --color-8: light-dark(#e8acff, #540dab);
+  --color-9: light-dark(#b57881, #9e0b91);
+  --headerSpacing: calc(14cqmin / var(--columnCount));
+  --cellGap: calc(7cqmin / var(--columnCount));
+}
+
+
 .page-container {
   display: flex;
   flex-direction: column;
@@ -62,40 +77,94 @@
   box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--mat-sys-surface-variant);
 }
 
-.color-1:not(.hidden) {
-  background-color: light-dark(#f15c5c, #50322d);
+.color-1 {
+  &:not(.hidden) {
+    background-color: var(--color-1);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-1);
+  }
 }
 
-.color-2:not(.hidden) {
-  background-color: light-dark(#f38347, #943501);
+.color-2 {
+  &:not(.hidden) {
+    background-color: var(--color-2);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-2);
+  }
 }
 
-.color-3:not(.hidden) {
-  background-color: light-dark(#f5e94e, #817d00);
+.color-3 {
+  &:not(.hidden) {
+    background-color: var(--color-3);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-3);
+  }
 }
 
-.color-4:not(.hidden) {
-  background-color: light-dark(#8ed091, #1b5e20);
+.color-4 {
+  &:not(.hidden) {
+    background-color: var(--color-4);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-4);
+  }
 }
 
-.color-5:not(.hidden) {
-  background-color: light-dark(#5e9799, #840046);
+.color-5 {
+  &:not(.hidden) {
+    background-color: var(--color-5);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-5);
+  }
 }
 
-.color-6:not(.hidden) {
-  background-color: light-dark(#66a7e8, #0062af);
+.color-6 {
+  &:not(.hidden) {
+    background-color: var(--color-6);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-6);
+  }
 }
 
-.color-7:not(.hidden) {
-  background-color: light-dark(#9192d7, #282a93);
+.color-7 {
+  &:not(.hidden) {
+    background-color: var(--color-7);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-7);
+  }
 }
 
-.color-8:not(.hidden) {
-  background-color: light-dark(#e8acff, #540dab);
+.color-8 {
+  &:not(.hidden) {
+    background-color: var(--color-8);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-8);
+  }
 }
 
-.color-9:not(.hidden) {
-  background-color: light-dark(#b57881, #9e0b91);
+.color-9 {
+  &:not(.hidden) {
+    background-color: var(--color-9);
+  }
+
+  &.hidden {
+    box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-9);
+  }
 }
 
 .container {
@@ -104,12 +173,6 @@
   max-width: min(100%, 100cqh); // Square aspect ratio constraint
   max-height: min(100%, 100cqw);
   line-height: normal;
-}
-
-
-:host {
-  --headerSpacing: calc(14cqmin / var(--columnCount));
-  --cellGap: calc(7cqmin / var(--columnCount));
 }
 
 
@@ -149,10 +212,6 @@
   aspect-ratio: 1;
   border-radius: calc(2cqmin / var(--columnCount) * 3);
   width: calc((100cqmin - var(--headerSpacing) - ((var(--columnCount) - 2) * var(--cellGap)))/ var(--columnCount));
-}
-
-.cell.hidden {
-  box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px #ff00007a;
 }
 
 .corner-number {
