--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,11 @@
 <app-celebration></app-celebration>
 
-<div [matMenuTriggerFor]="menu" class="menu-trigger">
+<div
+  [matMenuTriggerFor]="menu"
+  class="menu-trigger"
+  [matBadgeHidden]="!versionCheckService.isUpdateAvailable"
+  matBadge="1"
+>
   <mat-icon>more_vert</mat-icon>
 </div>
 <mat-menu #menu="matMenu">
@@ -17,6 +22,22 @@
   <button mat-menu-item (click)="toggleColorMode()">
     <mat-icon>{{ currentColorMode.icon }}</mat-icon>
     {{ currentColorMode.label }} Mode
+  </button>
+
+  <button mat-menu-item (click)="versionCheckService.refreshApp()">
+    <mat-icon
+      [matBadgeHidden]="!versionCheckService.isUpdateAvailable"
+      matBadgePosition="before"
+      matBadge="!"
+      >refresh</mat-icon
+    >
+    <span>
+      @if (versionCheckService.isUpdateAvailable) {
+        Refresh (Update Available)
+      } @else {
+        Refresh
+      }
+    </span>
   </button>
 </mat-menu>
 
